[FIND-1047] Fix layout problems of sunburst widget
[rev: Matthew Gordon]

--- a/webapp/core/src/main/less/app-include.less
+++ b/webapp/core/src/main/less/app-include.less
@@ -2263,7 +2263,7 @@ h4.similar-dates-message {
     }
   }
 
-  .sunburst-legend-item {
+  .sunburst-legend-entry {
     margin: 0 10px 0 0;
     display: inline-block;
 
@@ -2272,8 +2272,8 @@ h4.similar-dates-message {
     }
   }
 
-  &.legend-one-item-per-line {
-    .sunburst-legend-item {
+  &.legend-one-entry-per-line {
+    .sunburst-legend-entry {
       display: block;
     }
   }
